# adk

./: CHANGELOG.md  README.md  licenses.json  pyproject.toml
.claude/plugins/poly-adk/.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
.github/workflows/: outrider-daily.yml  outrider.yml
.remyx/: repo_intel.yaml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/concepts/: working-locally.md
docs/docs/examples/: index.md
docs/docs/get-started/: get-started.md  prerequisites.md  what-is-the-adk.md
docs/docs/reference/: agent_settings.md  branch_merge.md  chat_settings.md  cli.md  experimental_config.md  languages.md  tests.md  tooling.md  translations.md
docs/docs/tutorials/: build-an-agent.md
scripts/: sync_runtime_stubs.py
src/poly/: ab_test_bandit.py  cli.py  project.py  utils.py
src/poly/docs/: docs.md  flows.md  languages.md  tests.md  translations.md
src/poly/handlers/: auth0_handler.py  interface.py  platform_api.py  sdk.py  sync_client.py
src/poly/handlers/protobuf/: agent_settings_pb2.py  agent_settings_pb2.pyi  artifact_pb2.py  artifact_pb2.pyi  channels_pb2.py  channels_pb2.pyi  commands_pb2.py  commands_pb2.pyi  flows_pb2.py  flows_pb2.pyi  functions_pb2.py  functions_pb2.pyi  guardrails_pb2.py  guardrails_pb2.pyi  integrations_pb2.py  integrations_pb2.pyi  knowledge_base_pb2.py  knowledge_base_pb2.pyi  sms_pb2.py  sms_pb2.pyi  snapshot_pb2.py  snapshot_pb2.pyi  testing_pb2.py  testing_pb2.pyi  translations_pb2.py  translations_pb2.pyi  voice_pb2.py  (+1 more)
src/poly/output/: console.py
src/poly/resources/: __init__.py  agent_settings.py  channel_settings.py  experimental_config.py  experimental_config_schema.yaml  flow_layout_utils.py  flows.py  function.py  keyphrase_boosting.py  languages.py  phrase_filter.py  pronunciation.py  resource.py  resource_utils.py  safety_filters.py  sms.py  test_suite.py  topic.py  translations.py  variable.py  variant_attributes.py
src/poly/tests/: ab_test_bandit_test.py  ab_test_test.py  cli_test.py  project_test.py  resources_test.py  utils_test.py
src/poly/types/: agentic_dial.py  agentic_dial.pyi  analytics.pyi  attachment.py  conv_utils.py  conv_utils.pyi  conversation.py  conversation.pyi  emails.py  emails.pyi  entity_validator.py  entity_validator.pyi  external_events.py  flow.py  history.py  knowledge_base.pyi  llm_client.pyi  log_utils.py  memory.py  sms.py  state_utils.pyi  value_extraction.py  value_extraction.pyi  value_extraction_types.py  value_extraction_types.pyi  webchat.py
(+18 files in other folders)
