[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "poly*",
]
exclude = [
    "poly.tests*",
]

[tool.setuptools.package-data]
"poly.resources" = [
    "*.yaml",
]
"poly.docs" = [
    "*.md",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "src/poly/handlers/protobuf/",
]

[tool.ruff.format]
exclude = [
    "src/poly/tests/**.py",
]

[tool.ruff.lint.per-file-ignores]
"src/poly/handlers/protobuf/**" = [
    "ALL",
]
"*/__init__.py" = [
    "F401",
]
"src/poly/tests/**.py" = [
    "D100",
    "F403",
    "F405",
]

[tool.coverage.run]
omit = [
    "src/poly/handlers/protobuf/*",
    "src/poly/types/*",
]

[tool.coverage.report]
omit = [
    "src/poly/handlers/protobuf/*",
    "src/poly/types/*",
]

[tool.pytest.ini_options]
norecursedirs = [
    "test_projects",
]

[tool.pip-licenses]
format = "json"
output-file = "licenses.json"
with-urls = true
no-version = true
ignore-packages = [
    "polyai-adk",
]

[tool.licensecheck]
using = "PEP631"
only_licenses = [
    "mit",
    "apache",
    "bsd",
    "mpl",
]
ignore_packages = [
    "idna",
    "jsonschema",
    "jsonschema-specifications",
    "referencing",
    "rpds-py",
    "urllib3",
    "wcwidth",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
branch = "main"
commit_message = "chore(release): {version}"
build_command = "pip install build && python -m build"
tag_format = "v{version}"






































[project]
name = "polyai-adk"
version = "0.29.0"
description = "Agent Development Kit (ADK) — a CLI for managing Agent Studio projects locally"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "protobuf>=4.21.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "questionary==2.1.1",
    "jsonschema>=4.20.0",
    "requests==2.31.0",
    "python-dateutil==2.8.2",
    "ruff>=0.14.0",
    "ty",
    "argcomplete>=3.0.0",
    "langcodes==3.5.1"
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.0.0",
    "tomli-w>=1.0.0",
    "pip-licenses>=5.5.1",
    "licensecheck>=2024.3",
]

[project.scripts]
poly = "poly.cli:main"
adk = "poly.cli:main"
